k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend
  namespace: default
  labels:
    app: fastapi-backend
spec:
  strategy:
    type: Recreate
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-backend
  template:
    metadata:
      labels:
        app: fastapi-backend
    spec:
      serviceAccountName: fastapi-backend-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: fastapi-backend
          image: 324330564368.dkr.ecr.ap-south-1.amazonaws.com/staging-fastapi-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL     
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: tmp-volume
          emptyDir: {}
      imagePullSecrets:
        - name: ecr-regcred

---

apiVersion: v1
kind: Service
metadata:
  name: fastapi-backend-service
  namespace: default
  labels:
    app: fastapi-backend
spec: 
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: fastapi-backend
