k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-frontend
  namespace: default
  labels:
    app: fastapi-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-frontend
  template:
    metadata:
      labels:
        app: fastapi-frontend
    spec:
      containers:
        - name: fastapi-backend
          image: 324330564368.dkr.ecr.ap-south-1.amazonaws.com/staging-react-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ecr-regcred
---

apiVersion: v1
kind: Service
metadata:
  name: fastapi-frontend-service
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: fastapi-frontend
