k8s/kyverno-disallow-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-run-as-non-root
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - argocd
    validate:
      message: "Running as root is forbidden! You must set spec.securityContext.runAsNonRoot to true."
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
